kubernetes/kustomize/gitea/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app.kubernetes.io/component: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gitea
    spec:
      serviceAccountName: gitea
      terminationGracePeriodSeconds: 300
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: gitea
          image: gitea
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: ssh
              containerPort: 2222
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: gitea-data
              mountPath: /var/lib/gitea
            - name: gitea-config
              mountPath: /etc/gitea
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 15
            timeoutSeconds: 5
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-shared-storage
        - name: gitea-config
          emptyDir: {}
        - name: tmp
          emptyDir:
            sizeLimit: 512Mi
