kubernetes/kustomize/gitea/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app.kubernetes.io/component: gitea
spec:
  selector:
    app.kubernetes.io/component: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  labels:
    app.kubernetes.io/component: gitea
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: "510d12e5-a578-46e5-acb0-32bc0ffcb04c"
    kubernetes.io/elb.pass-through: onlyLocal
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/component: gitea
  ports:
    - name: ssh
      port: 2222
      targetPort: 2222
      protocol: TCP
      ipFamilyPolicy: SingleStack
